<resources>
    <string name="ImagenDeInicio">Imagen de Inicio</string>
    <string name="dctitulo">Diagnosticos Clínicos Dentales</string>
    <string name="luss">Logo Universidad San Sebastian</string>
    <string name="cacceso">Control De Acceso</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="tiposesion">Selecciona Tu Sesión</string>
    <string name="noparte">No es parte del curso</string>
    <string name="parte">Si es parte del curso</string>
    <string name="tema">Tema</string>
    <string name="send">Enviar</string>
    <string name="quiztitulo">Quiz</string>
    <string name="pregunta">Pregunta</string>
    <string name="quetiene">¿Que Tendra El Paciente?</string>
    <string name="terminar">Terminar Quiz</string>
    <string name="next">Siguiente</string>
    <string name="diag">Diagnosticos</string>
    <string name="herpes">Herpes Simplex</string>
    <string name="cold">Resfrio</string>
    <string name="gripe">Gripe</string>
    <string name="jaqueca">Jaqueca</string>
    <string name="pendiente">Pendiente</string>
    <string name="respu">Respuestas</string>
    <string name="respucorrecta">Respuesta Correcta!</string>
    <string name="recuerda">Recuerda que tambien pudo haber sido:</string>
    <string name="respu1">Gripo, Lesión o Virus</string>
    <string name="exit">Salir De La Sesión</string>
    <string name="filtro">Filtrar Por Nombre</string>
    <string name="buscar">Buscar</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel risus et diam dictum tempor sed a libero. Mauris gravida tortor dignissim faucibus pharetra. Cras sit amet dui justo. Etiam dapibus tristique efficitur. Sed eget quam enim. Praesent tempor felis vitae felis blandit cursus. Vivamus efficitur neque diam, vitae euismod dui sagittis ut. Donec aliquam pharetra ligula. Aliquam elementum risus risus, a molestie magna porttitor ac. Nam posuere quis sem quis laoreet. Sed vestibulum justo sed luctus convallis. Aenean non quam ac massa sollicitudin imperdiet. Suspendisse potenti. Etiam pellentesque massa sed dui pulvinar, eu mattis sapien volutpat.</string>
    <string name="back">Volver Al Quiz</string>
</resources>
